# vaultabricks

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/: api.py  main.py  models.py  utils.py
src/.databricks/sync-snapshots/: c6e3b948a8d72681.json
src/static/css/: styles.css
src/static/js/: main.js
src/templates/: index.html
static/js/: main.js
templates/: index.html
